Localization to Russian language

--- a/todoapp/templates/todoapp/createtodo.html
+++ b/todoapp/templates/todoapp/createtodo.html
@@ -1,9 +1,10 @@
 {% extends 'todoapp/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>New Task</h2>
+            <h2>{% trans "New Task" %}</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -16,18 +17,18 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="title">Title</label>
+                    <label for="title">{% trans "Title" %}</label>
                     <input type="text" name="title" class="form-control" id="title" required>
                 </div>
                 <div class="form-group">
-                    <label for="memo">Memo</label>
+                    <label for="memo">{% trans "Memo" %}</label>
                     <textarea name="memo" class="form-control" id="memo" ></textarea>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" name="important" class="form-check-input" id="important">
-                    <label class="form-check-label" for="important">Important</label>
+                    <label class="form-check-label" for="important">{% trans "Important" %}</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
             </form>
         </div>
     </div>
