--- a/todoapp/templates/todoapp/base.html
+++ b/todoapp/templates/todoapp/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,33 +25,53 @@
         <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item {{ current }}">
-                    <a class="nav-link" href="{% url 'currenttodos' %}">Current</a>
+                    <a class="nav-link" href="{% url 'currenttodos' %}">{% trans "Current" %}</a>
                 </li>
                 <li class="nav-item {{ completed }}">
-                    <a class="nav-link" href="{% url 'completedtodos' %}">Completed</a>
+                    <a class="nav-link" href="{% url 'completedtodos' %}">{% trans "Completed" %}</a>
                 </li>
                 <li class="nav-item {{ create }}">
-                    <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
+                    <a class="nav-link" href="{% url 'createtodo' %}">{% trans "Create" %}</a>
                 </li>
         </ul>
     {% endif %}
     <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
+                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">{% trans "Logout" %}</a>
                     <form style='display: none;' method="POST" action="{% url 'logoutuser' %}">
                         {% csrf_token %}
-                        <button id="signOutBtn" type="submit">Logout</button>
+                        <button id="signOutBtn" type="submit">{% trans "Logout" %}</button>
                     </form>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'signupuser' %}">Sign Up</a>
+                    <a class="nav-link" href="{% url 'signupuser' %}">{% trans "Sign Up" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'loginuser' %}">Login</a>
+                    <a class="nav-link" href="{% url 'loginuser' %}">{% trans "Login" %}</a>
                 </li>
             {% endif %}
+                    <form id="lang" action="{% url 'set_language' %}" method="post">
+                        {% csrf_token %}
+                        <input name="next" type="hidden" value="{{ redirect_to }}">
+                        <select class="form-control me-2" name="language" onchange="submitForm()">
+                            {% get_current_language as LANGUAGE_CODE %}
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            {% for language in languages %}
+                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                                        selected {% endif %}>
+                                    {{ language.name_local }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                        <script>
+                        function submitForm() {
+                          document.getElementById("lang").submit();
+                        }
+                        </script>
+                    </form>
         </ul>
     </div>
 </div>
