--- a/todoapp/templates/todoapp/home.html
+++ b/todoapp/templates/todoapp/home.html
@@ -1,4 +1,5 @@
 {% extends 'todoapp/base.html' %}
+{% load i18n %}
 
 {% block content %}
 <br>
@@ -9,12 +10,14 @@
     <br>
 <div class="row justify-content-center mt-5">
         <div class="col-md-7 text-center">
-                 <h1>Simply Your Tasks.</h1>
+                 <h1>{% trans "Simply Your Tasks." %}</h1>
+            {% blocktrans %}
             <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>TickTask</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+            {% endblocktrans %}
         {% if user.is_authenticated %}
-            <a role="button" class="btn btn-primary btn-lg" href="{% url 'createtodo' %}">New Task</a>
+            <a role="button" class="btn btn-primary btn-lg" href="{% url 'createtodo' %}">{% trans "New Task" %}</a>
         {% else %}
-            <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
+            <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">{% trans "Start" %}</a>
         {% endif %}
         </div>
     </div>
