--- a/todoapp/templates/todoapp/loginuser.html
+++ b/todoapp/templates/todoapp/loginuser.html
@@ -1,9 +1,10 @@
 {% extends 'todoapp/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>Login</h2>
+            <h2>{% trans "Login" %}</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -16,18 +17,18 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">{% trans "Username" %}</label>
                     <input type="text" name="username" class="form-control" id="username">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">{% trans "Password" %}</label>
                     <input type="password" name="password" class="form-control" id="password">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
             </form>
             <hr>
             <div class="text-center">
-                Need an account? <a href="{% url 'signupuser' %}">Sign Up here</a>
+                {% trans "Need an account?" %} <a href="{% url 'signupuser' %}">{% trans "Sign Up here" %}</a>
             </div>
         </div>
     </div>
