--- a/todoapp/templates/todoapp/signupuser.html
+++ b/todoapp/templates/todoapp/signupuser.html
@@ -1,9 +1,10 @@
 {% extends 'todoapp/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>Sign Up</h2>
+            <h2>{% trans "Sign Up" %}</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -16,23 +17,23 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">{% trans "Username" %}</label>
                     <input type="text" name="username" class="form-control" id="username" aria-describedby="usernameHelp">
-                    <small id="usernameHelp" class="form-text text-muted">Your username must be unique. We'll let you know if someone has taken it already.</small>
+                    <small id="usernameHelp" class="form-text text-muted">{% trans "Your username must be unique. We'll let you know if someone has taken it already." %}</small>
                 </div>
                 <div class="form-group">
-                    <label for="password1">Password</label>
+                    <label for="password1">{% trans "Password" %}</label>
                     <input type="password" name="password1" class="form-control" id="password1">
                 </div>
                 <div class="form-group">
-                    <label for="password2">Confirm Password</label>
+                    <label for="password2">{% trans "Confirm Password" %}</label>
                     <input type="password" name="password2" class="form-control" id="password2">
                 </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
             </form>
             <hr>
             <div class="text-center">
-                Do you already have an account? <a href="{% url 'loginuser' %}">Login here</a>
+                {% trans "Do you already have an account?"  %}<a href="{% url 'loginuser' %}">{% trans "Login here" %}</a>
             </div>
         </div>
     </div>
