--- a/todoapp/templates/todoapp/viewtodo.html
+++ b/todoapp/templates/todoapp/viewtodo.html
@@ -1,9 +1,10 @@
 {% extends 'todoapp/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>New Task</h2>
+            <h2>{% trans "New Task" %}</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -16,31 +17,31 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="title">Title</label>
+                    <label for="title">{% trans "Title" %}</label>
                     <input type="text" name="title" class="form-control" id="title" value="{{ todo.title }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="memo">Memo</label>
+                    <label for="memo">{% trans "Memo" %}</label>
                     <textarea name="memo" rows="5" class="form-control" id="memo" >{{ todo.memo }}</textarea>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" name="important" class="form-check-input" id="important" {% if todo.important %}checked{% endif %}>
-                    <label class="form-check-label" for="important">Important</label>
+                    <label class="form-check-label" for="important">{% trans "Important" %}</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
-                <button type="button" class="btn btn-success" onclick="$('#complete').click()">Complete</button>
-                <button type="button" class="btn btn-danger" onclick="$('#delete').click()">Delete</button>
+                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                <button type="button" class="btn btn-success" onclick="$('#complete').click()">{% trans "Complete" %}</button>
+                <button type="button" class="btn btn-danger" onclick="$('#delete').click()">{% trans "Delete" %}</button>
             </form>
         </div>
     </div>
     {% if todo.datecomplited is None %}
         <form style='display: none;' method="POST" action="{% url 'completetodo' todo.id %}">
             {% csrf_token %}
-            <button id="complete" type="submit">Complete</button>
+            <button id="complete" type="submit">{% trans "Complete" %}</button>
         </form>
     {% endif %}
     <form style='display: none;' method="POST" action="{% url 'deletetodo' todo.id %}">
         {% csrf_token %}
-        <button id="delete" type="submit">Delete</button>
+        <button id="delete" type="submit">{% trans "Delete" %}</button>
     </form>
 {% endblock %}
